# machine_learning_enspd

./: README.md  Untitled.ipynb  data_pipeline.py  export_onnx.py  main_training.py  model_architecture.py
backend/: Cargo.toml  model_metadata.json  student_model.onnx
backend/src/: inference.rs  main.rs  models.rs
backend/static/: index.html  script.js  style.css
data/: features.csv
inferences/: Cargo.toml
inferences/src/: inference.rs  main.rs  routes.rs  types.rs
models/: export_onnx.py  model.py  student_model_pro_20260108_223923.pkl  student_model_pro_20260108_223923.pth  student_model_ts_20260108_223923.pt
notebook/: Untitled.ipynb
trian_rapport/: model_metadata.json  performance_report_pro_20260108_223923.json
