[package]
name = "inferences"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
actix-files = "0.7"
actix-cors = "0.8"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = { version = "0.24", features = ["onnx"] }
ndarray = "0.16"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
config = "0.14"
dotenv = "0.15"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rayon = "1.10"
parking_lot = "0.12"
ahash = "0.8"
bytes = "1.6"
dashmap = "5.5"
num_cpus = "1.16"  # AJOUTÉ

# Retirer moka pour simplifier

[dev-dependencies]
reqwest = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"