[package]
name = "inferences"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
actix-files = "0.6.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
ndarray = "0.16"
anyhow = "1.0"
lazy_static = "1.4"
once_cell = "1.19"
rayon = "1.10"         
parking_lot = "0.12"   
ahash = "0.8"          
bytes = "1.6"        
dashmap = "5.5"        
tract-onnx = "0.22.0"
moka = {version ="0.12.12", features = ["sync"]}
